# texteditor

./: CMakeLists.txt  autocompleter.cpp  autocompleter.h  basehoverhandler.cpp  basehoverhandler.h  behaviorsettings.cpp  behaviorsettings.h  behaviorsettingswidget.cpp  circularclipboardassist.cpp  codecchooser.cpp  codeformatter.cpp  codeformatter.h  codestylepool.cpp  codestyleselectorwidget.cpp  codestyleselectorwidget.h  colorscheme.cpp  colorschemeedit.h  commentssettings.cpp  commentssettings.h  completionsettings.cpp  completionsettings.h  cppcodeformatter.cpp  cppcodeformatter.h  cppcodestylesettings.cpp  cppcodestylesettings.h  cppqtstyleindenter.cpp  cppqtstyleindenter.h  demo.js  displaysettings.cpp  displaysettings.h  extraencodingsettings.cpp  extraencodingsettings.h  fontsettings.cpp  fontsettings.h  formatter.h  highlighter.cpp  highlighter.h  highlightersettings.cpp  highlightersettings.h  indenter.h  (+50 more)
aggregation/: aggregation_global.h
codeassist/: assistinterface.cpp  assistinterface.h  assistproposalitem.cpp  assistproposalitem.h  codeassistant.cpp  codeassistant.h  completionassistprovider.h  documentcontentcompletion.cpp  documentcontentcompletion.h  functionhintproposalwidget.cpp  genericproposal.h  genericproposalmodel.cpp  genericproposalmodel.h  genericproposalwidget.cpp  genericproposalwidget.h  iassistprocessor.h  iassistproposal.h  iassistproposalmodel.h  iassistproposalwidget.h  iassistprovider.h  ifunctionhintproposalmodel.h  keywordscompletionassist.cpp  keywordscompletionassist.h  textdocumentmanipulator.cpp  textdocumentmanipulatorinterface.h
core/: core_global.h  documentmodel.cpp  documentmodel.h  editorarea.cpp  editormanager.cpp  editormanager.h  editormanager_p.h  editorview.cpp  icontext.h  icore.cpp  icore.h  ieditor.h  ieditorfactory.cpp  ieditorfactory.h  textdocument.cpp
core/actionmanager/: actioncontainer.cpp  actioncontainer.h  actioncontainer_p.h  actionmanager.cpp  actionmanager.h  actionmanager_p.h  command.cpp  command.h  command_p.h
core/find/: basetextfind.cpp  basetextfind.h  highlightscrollbarcontroller.cpp  highlightscrollbarcontroller.h  ifindsupport.cpp  textfindconstants.h
languages/: loader.cpp  loader.h  token.h
languages/css/: cssautocompleter.cpp  cssautocompleter.h  csscodeformatter.cpp  csscodeformatter.h  csshighlighter.cpp  csshighlighter.h  cssindenter.cpp  cssindenter.h  cssscanner.cpp  cssscanner.h  loader.cpp  loader.h
languages/cstyle/: cstyleautocompleter.cpp  cstyleautocompleter.h  cstylecodeformatter.cpp  cstylecodeformatter.h  cstylehighlighter.cpp  cstylehighlighter.h  cstyleindenter.cpp  cstyleindenter.h  cstyleqtcodeformatter.cpp  cstyleqtcodeformatter.h  cstylescanner.cpp  cstylescanner.h
languages/html/: htmlautocompleter.cpp  htmlautocompleter.h  htmlcodeformatter.cpp  htmlcodeformatter.h  htmlhighlighter.cpp  htmlhighlighter.h  htmlindenter.cpp  htmlindenter.h  htmlscanner.cpp  htmlscanner.h  loader.cpp  loader.h
languages/javascript/: jsautocompleter.cpp  jscodeformatter.cpp  jscodeformatter.h  jshighlighter.cpp  jshighlighter.h  jsindenter.cpp  jsscanner.cpp  jsscanner.h  loader.cpp  loader.h
languages/jsx/: jsxautocompleter.cpp  jsxautocompleter.h  jsxcodeformatter.cpp  jsxcodeformatter.h  jsxhighlighter.cpp  jsxhighlighter.h  jsxindenter.cpp  jsxindenter.h  jsxscanner.cpp  jsxscanner.h  loader.cpp  loader.h
languages/php/: phpautocompleter.cpp  phpautocompleter.h  phpcodeformatter.cpp  phpcodeformatter.h  phpindenter.cpp  phpindenter.h  phpscanner.cpp  phpscanner.h
languages/python/: loader.cpp  loader.h  pythonhighlighter.cpp  pythonhighlighter.h  pythonindenter.cpp  pythonindenter.h  pythonscanner.cpp  pythonscanner.h
languages/tsx/: loader.cpp  loader.h  tsxautocompleter.cpp  tsxautocompleter.h  tsxcodeformatter.cpp  tsxcodeformatter.h  tsxhighlighter.cpp  tsxhighlighter.h  tsxindenter.cpp  tsxindenter.h  tsxscanner.cpp  tsxscanner.h
resource/: mime.xml
resource/styles/: dark.xml  default_light.xml
resource/syntax/: css.xml  javascript-react.xml  php.xml
snippets/: snippet.cpp  snippet.h  snippetassistcollector.cpp  snippetassistcollector.h  snippeteditor.cpp  snippeteditor.h  snippetoverlay.h  snippetparser.h  snippetprovider.cpp  snippetprovider.h  snippetscollection.cpp  snippetscollection.h
syntax-highlighting/: abstracthighlighter.h  definitiondownloader.cpp  highlightingdata.cpp  ksyntaxhighlighting_export.h  repository.cpp
uchardet/: CMakeLists.txt  nsCodingStateMachine.h  nsGB2312Prober.cpp  nsMBCSGroupProber.cpp  nsPkgInt.h  nsSBCharSetProber.h  nsUniversalDetector.cpp
uchardet/script/: header-template.cpp
uchardet/script/langs/: he.py
uchardet/src/: CMakeLists.txt
utils/: fadingindicator.cpp  faketooltip.cpp  filepath.cpp  filesearch.h  fileutils.cpp  fileutils_mac.h  fileutils_mac.mm  infobar.cpp  mimeutils.h  minimizableinfobars.cpp  multitextcursor.cpp  qtcassert.cpp  runextensions.h  savefile.cpp  settingsutils.h  stringutils.cpp  stringutils.h  textfileformat.cpp  textfileformat.h  textutils.cpp  textutils.h  utils_global.h
utils/mimetypes2/: mimedatabase.cpp  mimemagicrule_p.h  mimeprovider.cpp  mimetype.cpp  mimetypeparser.cpp  mimeutils.cpp
utils/theme/: theme.cpp  theme.h
utils/tooltip/: tips.cpp  tooltip.cpp
